Fix owners and add Team & Leadership section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h3>Issue Resolution</h3>
                         <p>Troubleshoot and resolve security issues with guided playbooks and workflows</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Curtis Lewis</span>
+                            <span><i class="fas fa-user"></i> Ankit Varshney</span>
                             <span><i class="fas fa-calendar"></i> Oct 31, 2025</span>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                         <h3>Playbooks, Decks & Videos</h3>
                         <p>MCS playbooks, presentation decks, and training videos for security services</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Purish Dwivedi</span>
+                            <span><i class="fas fa-user"></i> Geordie McGarty</span>
                             <span><i class="fas fa-calendar"></i> Dec 2, 2024</span>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                         <h3>MCSfMSC Delivery</h3>
                         <p>Service delivery resources, templates, and guidelines for customer engagements</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Sherry Shao</span>
+                            <span><i class="fas fa-user"></i> Subha Sahoo</span>
                             <span><i class="fas fa-calendar"></i> Sep 28, 2025</span>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                         <h3>MCSfMSC Onboarding</h3>
                         <p>Customer onboarding materials, checklists, and setup guides</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Soumodipto Chatterjee</span>
+                            <span><i class="fas fa-user"></i> Shalini Hada</span>
                             <span><i class="fas fa-calendar"></i> Feb 25, 2025</span>
                         </div>
                     </div>
@@ -192,6 +192,53 @@
                         <li><i class="fas fa-check"></i> Insider risk management</li>
                     </ul>
                     <a href="pages/playbooks.html#purview" class="service-link">View Playbook →</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team & Leadership -->
+    <section class="content-section alt-bg">
+        <div class="section-container">
+            <div class="section-header">
+                <h2><i class="fas fa-users"></i> Team & Leadership</h2>
+                <p>Key contacts and area owners for MCSfMSC</p>
+            </div>
+            <div class="team-grid">
+                <div class="team-card team-lead">
+                    <div class="team-icon"><i class="fas fa-crown"></i></div>
+                    <h3>Marlene Shaup</h3>
+                    <p class="team-role">MCS Product Owner</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-bug"></i></div>
+                    <h3>Ankit Varshney</h3>
+                    <p class="team-role">Issue Resolution</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                    <h3>Geordie McGarty</h3>
+                    <p class="team-role">Training</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-chart-bar"></i></div>
+                    <h3>Subha Sahoo</h3>
+                    <p class="team-role">Metrics & Reporting</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-user-plus"></i></div>
+                    <h3>Shalini Hada</h3>
+                    <p class="team-role">Customer Onboarding & Offboarding</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-file-contract"></i></div>
+                    <h3>Shalini</h3>
+                    <p class="team-role">Customer SIPs and CHR</p>
+                </div>
+                <div class="team-card">
+                    <div class="team-icon"><i class="fas fa-lightbulb"></i></div>
+                    <h3>Miky</h3>
+                    <p class="team-role">Roadmap Insights & Early Adoption</p>
                 </div>
             </div>
         </div>
