--- a/pages/issue-resolution.html
+++ b/pages/issue-resolution.html
@@ -38,7 +38,7 @@
             <h1><i class="fas fa-bug"></i> Issue Resolution</h1>
             <p>Guided workflows, escalation paths, and resolution playbooks for Microsoft Security Cloud issues</p>
             <div class="page-hero-meta">
-                <span><i class="fas fa-user"></i> Owner: Curtis Lewis</span>
+                <span><i class="fas fa-user"></i> Owner: Ankit Varshney</span>
                 <span><i class="fas fa-calendar"></i> Last Updated: October 31, 2025</span>
             </div>
         </div>
