--- a/pages/onboarding.html
+++ b/pages/onboarding.html
@@ -36,7 +36,7 @@
             <h1><i class="fas fa-user-plus"></i> MCSfMSC Onboarding</h1>
             <p>Complete guide for onboarding new MCSfMSC customers — from initial request to active service delivery</p>
             <div class="page-hero-meta">
-                <span><i class="fas fa-user"></i> Owner: Soumodipto Chatterjee</span>
+                <span><i class="fas fa-user"></i> Owner: Shalini Hada</span>
                 <span><i class="fas fa-calendar"></i> Last Updated: February 25, 2025</span>
             </div>
         </div>
