--- a/pages/playbooks.html
+++ b/pages/playbooks.html
@@ -36,7 +36,7 @@
             <h1><i class="fas fa-book-open"></i> MCS Playbooks, Decks & Videos</h1>
             <p>Comprehensive collection of playbooks, presentation materials, and training videos for Microsoft Security Cloud services</p>
             <div class="page-hero-meta">
-                <span><i class="fas fa-user"></i> Owner: Purish Dwivedi</span>
+                <span><i class="fas fa-user"></i> Owner: Geordie McGarty</span>
                 <span><i class="fas fa-calendar"></i> Last Updated: December 2, 2024</span>
             </div>
         </div>
