Add Resources page with 60+ Teams docs, RCA section, onboarding docs, nav updates

--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link active">Delivery</a>
                 <a href="onboarding.html" class="nav-link">Onboarding</a>
+                <a href="resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right"><div class="user-avatar"><i class="fas fa-user-circle"></i></div></div>
         </div>
