--- a/pages/issue-resolution.html
+++ b/pages/issue-resolution.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link">Delivery</a>
                 <a href="onboarding.html" class="nav-link">Onboarding</a>
+                <a href="resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right">
                 <div class="user-avatar"><i class="fas fa-user-circle"></i></div>
@@ -434,6 +435,42 @@
         </div>
     </section>
 
+    <!-- RCA & Incident -->
+    <section class="content-section alt-bg" id="rca-incident">
+        <div class="section-container">
+            <div class="section-header">
+                <h2><i class="fas fa-exclamation-circle"></i> RCA & Incident</h2>
+                <p>Root Cause Analysis resources and incident tracking</p>
+            </div>
+            <div class="doc-grid">
+                <a href="#" class="doc-card">
+                    <div class="doc-icon discussion"><i class="fas fa-video"></i></div>
+                    <div class="doc-info">
+                        <h4>MCS RCA Office Hours — Invite & Details</h4>
+                        <span class="doc-meta"><i class="fas fa-calendar-check"></i> Recurring</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+                <a href="#" class="doc-card">
+                    <div class="doc-icon email"><i class="fas fa-envelope"></i></div>
+                    <div class="doc-info">
+                        <h4>MCS RCA Office Hours — Email</h4>
+                        <span class="doc-meta"><i class="fas fa-envelope-open"></i> .eml</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+                <a href="#" class="doc-card">
+                    <div class="doc-icon incident"><i class="fas fa-fire"></i></div>
+                    <div class="doc-info">
+                        <h4>IcM Incident #953127 — MCSfMSC Escalation</h4>
+                        <span class="doc-meta"><i class="fas fa-hashtag"></i> IcM</span>
+                    </div>
+                    <span class="doc-source"><i class="fas fa-fire-alt"></i> IcM</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-container">
@@ -446,6 +483,7 @@
                         <li><a href="playbooks.html">Playbooks & Videos</a></li>
                         <li><a href="delivery.html">Delivery</a></li>
                         <li><a href="onboarding.html">Onboarding</a></li>
+                        <li><a href="resources.html">Resources</a></li>
                     </ul>
                 </div>
                 <div class="footer-col"><h4>Contact</h4><ul><li><a href="mailto:mcsfmsc@microsoft.com"><i class="fas fa-envelope"></i> mcsfmsc@microsoft.com</a></li></ul></div>
