--- a/pages/onboarding.html
+++ b/pages/onboarding.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link">Delivery</a>
                 <a href="onboarding.html" class="nav-link active">Onboarding</a>
+                <a href="resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right"><div class="user-avatar"><i class="fas fa-user-circle"></i></div></div>
         </div>
@@ -291,12 +292,56 @@
         </div>
     </section>
 
+    <!-- Onboarding Documents from Teams -->
+    <section class="content-section alt-bg" id="onboarding-docs">
+        <div class="section-container">
+            <div class="section-header">
+                <h2><i class="fas fa-file-alt"></i> Onboarding Documents</h2>
+                <p>Presentations and resources from Teams</p>
+            </div>
+            <div class="doc-grid">
+                <a href="#" class="doc-card">
+                    <div class="doc-icon pptx"><i class="fas fa-file-powerpoint"></i></div>
+                    <div class="doc-info">
+                        <h4>MCS Customer Onboarding — Support Case Best Practices</h4>
+                        <span class="doc-meta"><i class="fas fa-user-shield"></i> Best Practices</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+                <a href="#" class="doc-card">
+                    <div class="doc-icon pptx"><i class="fas fa-file-powerpoint"></i></div>
+                    <div class="doc-info">
+                        <h4>MCSfMSC Internal Walking Deck</h4>
+                        <span class="doc-meta"><i class="fas fa-walking"></i> Internal Deck</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+                <a href="#" class="doc-card">
+                    <div class="doc-icon pptx"><i class="fas fa-file-powerpoint"></i></div>
+                    <div class="doc-info">
+                        <h4>Show & Tell — MCSfMSC Security Comms Deck 02.02.26</h4>
+                        <span class="doc-meta"><i class="fas fa-calendar"></i> Feb 2, 2026</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+                <a href="#" class="doc-card">
+                    <div class="doc-icon discussion"><i class="fas fa-comments"></i></div>
+                    <div class="doc-info">
+                        <h4>MCS for Security Cloud — GCC Onboarding Discussion</h4>
+                        <span class="doc-meta"><i class="fas fa-comment-dots"></i> Discussion</span>
+                    </div>
+                    <span class="doc-source"><i class="fab fa-microsoft"></i> Teams</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="site-footer">
         <div class="footer-container">
             <div class="footer-grid">
                 <div class="footer-col"><h4>MCSfMSC Portal</h4><p>Mission Critical Services for Microsoft Security Cloud</p></div>
-                <div class="footer-col"><h4>Pages</h4><ul><li><a href="issue-resolution.html">Issue Resolution</a></li><li><a href="playbooks.html">Playbooks</a></li><li><a href="delivery.html">Delivery</a></li><li><a href="onboarding.html">Onboarding</a></li></ul></div>
+                <div class="footer-col"><h4>Pages</h4><ul><li><a href="issue-resolution.html">Issue Resolution</a></li><li><a href="playbooks.html">Playbooks</a></li><li><a href="delivery.html">Delivery</a></li><li><a href="onboarding.html">Onboarding</a></li><li><a href="resources.html">Resources</a></li></ul></div>
                 <div class="footer-col"><h4>Contact</h4><ul><li><a href="mailto:mcsfmsc@microsoft.com"><i class="fas fa-envelope"></i> mcsfmsc@microsoft.com</a></li></ul></div>
             </div>
             <div class="footer-bottom"><p>&copy; 2025 Microsoft. MCSfMSC.</p></div>
