--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="pages/playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="pages/delivery.html" class="nav-link">Delivery</a>
                 <a href="pages/onboarding.html" class="nav-link">Onboarding</a>
+                <a href="pages/resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right">
                 <button class="icon-btn" title="Search (Ctrl+K)" id="searchToggle"><i class="fas fa-search"></i></button>
@@ -111,6 +112,18 @@
                         <div class="card-meta">
                             <span><i class="fas fa-user"></i> Shalini Hada</span>
                             <span><i class="fas fa-calendar"></i> Feb 25, 2025</span>
+                        </div>
+                    </div>
+                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
+                </a>
+                <a href="pages/resources.html" class="access-card">
+                    <div class="card-icon blue"><i class="fas fa-folder-open"></i></div>
+                    <div class="card-content">
+                        <h3>Resources & Documents</h3>
+                        <p>Ops Reviews, Sprint Planning, Readiness, Dashboards, and all Teams materials</p>
+                        <div class="card-meta">
+                            <span><i class="fas fa-file-alt"></i> 60+ Documents</span>
+                            <span><i class="fas fa-calendar"></i> Updated Weekly</span>
                         </div>
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
