Update Delivery owner to Marlene Shaup, active customers to 17

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="pages/onboarding.html#customer-onboarding-flow" class="btn btn-secondary"><i class="fas fa-user-plus"></i> Onboard a Customer</a>
             </div>
             <div class="hero-stats">
-                <div class="stat-item"><div class="stat-number">150+</div><div class="stat-label">Active Customers</div></div>
+                <div class="stat-item"><div class="stat-number">17</div><div class="stat-label">Active Customers</div></div>
                 <div class="stat-item"><div class="stat-number">50+</div><div class="stat-label">Playbooks</div></div>
                 <div class="stat-item"><div class="stat-number">500+</div><div class="stat-label">Issues Resolved</div></div>
                 <div class="stat-item"><div class="stat-number">10+</div><div class="stat-label">Security Services</div></div>
@@ -98,7 +98,7 @@
                         <h3>MCSfMSC Delivery</h3>
                         <p>Service delivery resources, templates, and guidelines for customer engagements</p>
                         <div class="card-meta">
-                            <span><i class="fas fa-user"></i> Subha Sahoo</span>
+                            <span><i class="fas fa-user"></i> Marlene Shaup</span>
                             <span><i class="fas fa-calendar"></i> Sep 28, 2025</span>
                         </div>
                     </div>
