--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -37,7 +37,7 @@
             <h1><i class="fas fa-truck"></i> MCSfMSC Delivery</h1>
             <p>Service delivery resources, templates, operational guidelines, and engagement management for customer engagements</p>
             <div class="page-hero-meta">
-                <span><i class="fas fa-user"></i> Owner: Subha Sahoo</span>
+                <span><i class="fas fa-user"></i> Owner: Marlene Shaup</span>
                 <span><i class="fas fa-calendar"></i> Last Updated: September 28, 2025</span>
             </div>
         </div>
