Add MCS Dashboard card (owner: Subha Sahoo) to homepage

--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
                     </div>
                     <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
                 </a>
+                <a href="pages/resources.html#dashboards" class="access-card">
+                    <div class="card-icon teal"><i class="fas fa-chart-bar"></i></div>
+                    <div class="card-content">
+                        <h3>MCS Dashboard</h3>
+                        <p>Power BI dashboards, SevA reports, and operational metrics for MCSfMSC</p>
+                        <div class="card-meta">
+                            <span><i class="fas fa-user"></i> Subha Sahoo</span>
+                            <span><i class="fas fa-calendar"></i> Jul 1, 2025</span>
+                        </div>
+                    </div>
+                    <div class="card-arrow"><i class="fas fa-arrow-right"></i></div>
+                </a>
                 <a href="pages/resources.html" class="access-card">
                     <div class="card-icon blue"><i class="fas fa-folder-open"></i></div>
                     <div class="card-content">
