Add Training to Playbooks card title

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="pages/playbooks.html" class="access-card">
                     <div class="card-icon green"><i class="fas fa-book-open"></i></div>
                     <div class="card-content">
-                        <h3>Playbooks, Decks & Videos</h3>
+                        <h3>Playbooks, Decks, Videos & Training</h3>
                         <p>MCS playbooks, presentation decks, and training videos for security services</p>
                         <div class="card-meta">
                             <span><i class="fas fa-user"></i> Geordie McGarty</span>
