Add Training page, move training content from Onboarding, add Training nav link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a href="pages/playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="pages/delivery.html" class="nav-link">Delivery</a>
                 <a href="pages/onboarding.html" class="nav-link">Onboarding</a>
+                <a href="pages/training.html" class="nav-link">Training</a>
                 <a href="pages/resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right">
