--- a/pages/onboarding.html
+++ b/pages/onboarding.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link">Delivery</a>
                 <a href="onboarding.html" class="nav-link active">Onboarding</a>
+                <a href="training.html" class="nav-link">Training</a>
                 <a href="resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right"><div class="user-avatar"><i class="fas fa-user-circle"></i></div></div>
@@ -202,92 +203,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- New Engineer Onboarding -->
-    <section class="content-section alt-bg">
-        <div class="section-container">
-            <div class="section-header">
-                <h2><i class="fas fa-chalkboard-teacher"></i> New Engineer Onboarding</h2>
-                <p>Getting started guide for engineers joining the MCSfMSC team</p>
-            </div>
-            <div class="engineer-onboarding">
-                <div class="eng-week">
-                    <h3><i class="fas fa-calendar-week"></i> Week 1: Orientation</h3>
-                    <ul>
-                        <li>Complete HR onboarding and compliance training</li>
-                        <li>Set up development environment and access permissions</li>
-                        <li>Review MCSfMSC Portal (this site!) and all documentation</li>
-                        <li>Meet with team lead and assigned buddy</li>
-                        <li>Shadow 2-3 customer calls with senior engineers</li>
-                        <li>Complete Microsoft Security certifications path review</li>
-                    </ul>
-                </div>
-                <div class="eng-week">
-                    <h3><i class="fas fa-calendar-week"></i> Week 2: Product Deep-Dives</h3>
-                    <ul>
-                        <li>Complete Microsoft Sentinel hands-on lab</li>
-                        <li>Complete Microsoft Defender XDR hands-on lab</li>
-                        <li>Review all <a href="playbooks.html">MCS Playbooks</a></li>
-                        <li>Study <a href="issue-resolution.html">Issue Resolution</a> processes and escalation paths</li>
-                        <li>Practice KQL queries in demo environment</li>
-                        <li>Review recent customer engagement case studies</li>
-                    </ul>
-                </div>
-                <div class="eng-week">
-                    <h3><i class="fas fa-calendar-week"></i> Week 3-4: Supervised Delivery</h3>
-                    <ul>
-                        <li>Co-lead customer calls with senior engineer oversight</li>
-                        <li>Perform first customer configuration task (supervised)</li>
-                        <li>Write first customer deliverable using <a href="delivery.html">delivery templates</a></li>
-                        <li>Complete customer onboarding simulation exercise</li>
-                        <li>Get sign-off from team lead for independent customer work</li>
-                        <li>Present 30-day learning summary to team</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Useful Resources -->
-    <section class="content-section">
-        <div class="section-container">
-            <div class="section-header">
-                <h2><i class="fas fa-link"></i> Useful Resources & Links</h2>
-            </div>
-            <div class="tools-grid">
-                <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/SED%20Customer%20Onboarding.aspx" target="_blank" class="tool-card">
-                    <i class="fas fa-clipboard-check"></i>
-                    <h4>SED Customer Onboarding Portal</h4>
-                    <p>Full onboarding portal on SharePoint</p>
-                </a>
-                <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/SED%20Customer%20Onboarding.aspx#6.-customer-setup-checklist" target="_blank" class="tool-card">
-                    <i class="fas fa-list-check"></i>
-                    <h4>Customer Setup Checklist (SP)</h4>
-                    <p>SharePoint version of setup checklist</p>
-                </a>
-                <a href="https://microsoft.sharepoint-df.com/:f:/r/sites/CxE-Security-Care/Shared%20Documents/Forms/AllItems.aspx?id=%2Fsites%2FCxE%2DSecurity%2DCare%2FShared%20Documents%2FMCSfMSC%20Onboarding&p=true" target="_blank" class="tool-card">
-                    <i class="fas fa-folder"></i>
-                    <h4>Onboarding Document Library</h4>
-                    <p>Full document library on SharePoint</p>
-                </a>
-                <a href="https://learn.microsoft.com/en-us/security/" target="_blank" class="tool-card">
-                    <i class="fas fa-graduation-cap"></i>
-                    <h4>Microsoft Security Docs</h4>
-                    <p>Official Microsoft Security documentation</p>
-                </a>
-                <a href="https://learn.microsoft.com/en-us/training/paths/sc-200/" target="_blank" class="tool-card">
-                    <i class="fas fa-certificate"></i>
-                    <h4>SC-200 Training Path</h4>
-                    <p>Security Operations Analyst certification</p>
-                </a>
-                <a href="https://security.microsoft.com" target="_blank" class="tool-card">
-                    <i class="fas fa-shield-alt"></i>
-                    <h4>Microsoft 365 Defender Portal</h4>
-                    <p>Unified security operations portal</p>
-                </a>
             </div>
         </div>
     </section>
