--- a/pages/resources.html
+++ b/pages/resources.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link">Delivery</a>
                 <a href="onboarding.html" class="nav-link">Onboarding</a>
+                <a href="training.html" class="nav-link">Training</a>
                 <a href="resources.html" class="nav-link active">Resources</a>
             </nav>
             <div class="nav-right"><div class="user-avatar"><i class="fas fa-user-circle"></i></div></div>
