--- a/pages/issue-resolution.html
+++ b/pages/issue-resolution.html
@@ -24,6 +24,7 @@
                 <a href="playbooks.html" class="nav-link">Playbooks & Videos</a>
                 <a href="delivery.html" class="nav-link">Delivery</a>
                 <a href="onboarding.html" class="nav-link">Onboarding</a>
+                <a href="training.html" class="nav-link">Training</a>
                 <a href="resources.html" class="nav-link">Resources</a>
             </nav>
             <div class="nav-right">
