Add customer logos, rebuild playbooks MCS-focused, fix links to SharePoint

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <li><i class="fas fa-check"></i> Automated investigation</li>
                         <li><i class="fas fa-check"></i> Cross-domain correlation</li>
                     </ul>
-                    <a href="pages/playbooks.html#defender-xdr" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon-wrap"><i class="fas fa-satellite-dish"></i></div>
@@ -173,7 +173,7 @@
                         <li><i class="fas fa-check"></i> Threat hunting</li>
                         <li><i class="fas fa-check"></i> SOAR capabilities</li>
                     </ul>
-                    <a href="pages/playbooks.html#sentinel" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon-wrap"><i class="fas fa-fingerprint"></i></div>
@@ -184,7 +184,7 @@
                         <li><i class="fas fa-check"></i> Identity Protection</li>
                         <li><i class="fas fa-check"></i> Privileged Identity Mgmt</li>
                     </ul>
-                    <a href="pages/playbooks.html#entra-id" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon-wrap"><i class="fas fa-cloud"></i></div>
@@ -195,7 +195,7 @@
                         <li><i class="fas fa-check"></i> Workload protection</li>
                         <li><i class="fas fa-check"></i> Regulatory compliance</li>
                     </ul>
-                    <a href="pages/playbooks.html#defender-cloud" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon-wrap"><i class="fas fa-envelope-open-text"></i></div>
@@ -206,7 +206,7 @@
                         <li><i class="fas fa-check"></i> Safe Attachments</li>
                         <li><i class="fas fa-check"></i> Threat investigation</li>
                     </ul>
-                    <a href="pages/playbooks.html#defender-office" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon-wrap"><i class="fas fa-lock"></i></div>
@@ -217,11 +217,48 @@
                         <li><i class="fas fa-check"></i> Information protection</li>
                         <li><i class="fas fa-check"></i> Insider risk management</li>
                     </ul>
-                    <a href="pages/playbooks.html#purview" class="service-link">View Playbook →</a>
+                    <a href="https://microsoft.sharepoint-df.com/sites/CxE-Security-Care/SitePages/Playbooks.aspx?web=1" target="_blank" class="service-link">View Playbook →</a>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Trusted Customers -->
+    <section class="customers-section">
+        <div class="section-container">
+            <div class="section-header">
+                <h2><i class="fas fa-building"></i> Trusted by Leading Organizations</h2>
+                <p>Mission Critical Services customers across industries</p>
+            </div>
+            <div class="customer-logos">
+                <div class="customer-logo-item">
+                    <img src="https://logo.clearbit.com/nhs.uk" alt="NHS" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                    <div class="customer-logo-fallback" style="display:none"><span>NHS</span></div>
+                    <p>NHS</p>
+                </div>
+                <div class="customer-logo-item">
+                    <img src="https://logo.clearbit.com/usaa.com" alt="USAA" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                    <div class="customer-logo-fallback" style="display:none"><span>USAA</span></div>
+                    <p>USAA</p>
+                </div>
+                <div class="customer-logo-item">
+                    <img src="https://logo.clearbit.com/barclays.com" alt="Barclays" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                    <div class="customer-logo-fallback" style="display:none"><span>Barclays</span></div>
+                    <p>Barclays</p>
+                </div>
+                <div class="customer-logo-item">
+                    <img src="https://logo.clearbit.com/morganstanley.com" alt="Morgan Stanley" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                    <div class="customer-logo-fallback" style="display:none"><span>Morgan Stanley</span></div>
+                    <p>Morgan Stanley</p>
+                </div>
+                <div class="customer-logo-item">
+                    <img src="https://logo.clearbit.com/ey.com" alt="EY" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                    <div class="customer-logo-fallback" style="display:none"><span>EY</span></div>
+                    <p>EY</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Team & Leadership -->
     <section class="content-section alt-bg">
